Part 2 and fixed Part 1

--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         <a href="#">Enter Site</a>    <a href="#">My Account</a>   <a href="#">Track Orders</a>   <a href="#">Contact Info</a>
     </nav>
     <main>
-        <img src="media/ce_image01.png" alt="facebook" class="facebook">
-        <img src="media/ce_image02.png" alt="twitter" class="twitter">
-        <img src="media/ce_image03.png" alt="anonmask" class="anonmask">
-        <img src="media/ce_image04.png" alt="birthday" class="birthday">
-        <img src="media/ce_image05.png" alt="clownkid" class="clownkid">
-        <img src="media/ce_image06.png" alt="clowngrandma" class="clowngrandma">
-        <img src="media/ce_image07.png" alt="pinkgirl" class="pinkgirl">
-        <img src="media/ce_image08.png" alt="musicalguy" class="musicalguy">
-        <img src="media/ce_image09.png" alt="supersale" class="supersale">
-        <img src="media/ce_image10.png" alt="candysale" class="candysale">
-        <img src="media/ce_image11.png" alt="greathats" class="greathats">
-        <img src="media/ce_image12.png" alt="props"class="props">
-        <img src="media/ce_image13.png" alt="santaclaus" class="santaclaus">
-        <img src="media/ce_image14.png" alt="classicpink" class="classicpink">
-        <img src="media/ce_image15.png" alt="shipping" class="shipping">
-        <img src="media/ce_image16.png" alt="ghost" class="ghost">
-        <img src="media/ce_image17.png" alt="wolf" class="wolf">
-        <img src="media/ce_image18.png" alt="witches" class="witches">
-        <img src="media/ce_image19.png" alt="blackmask" class="blackmask">
-        <img src="media/ce_image20.png" alt="daymask" class="daymask">
-        <img src="media/ce_logo.png" alt="logo" class="logo">
+        <img src="media/ce_image01.png" alt="facebook" class="facebook item">
+        <img src="media/ce_image02.png" alt="twitter" class="twitter item">
+        <img src="media/ce_image03.png" alt="anonmask" class="anonmask item">
+        <img src="media/ce_image04.png" alt="birthday" class="birthday item">
+        <img src="media/ce_image05.png" alt="clownkid" class="clownkid item">
+        <img src="media/ce_image06.png" alt="clowngrandma" class="clowngrandma item">
+        <img src="media/ce_image07.png" alt="pinkgirl" class="pinkgirl item">
+        <img src="media/ce_image08.png" alt="musicalguy" class="musicalguy item">
+        <img src="media/ce_image09.png" alt="supersale" class="supersale item">
+        <img src="media/ce_image10.png" alt="candysale" class="candysale item">
+        <img src="media/ce_image11.png" alt="greathats" class="greathats item">
+        <img src="media/ce_image12.png" alt="props"class="props item">
+        <img src="media/ce_image13.png" alt="santaclaus" class="santaclaus item">
+        <img src="media/ce_image14.png" alt="classicpink" class="classicpink item">
+        <img src="media/ce_image15.png" alt="shipping" class="shipping item">
+        <img src="media/ce_image16.png" alt="ghost" class="ghost item">
+        <img src="media/ce_image17.png" alt="wolf" class="wolf item">
+        <img src="media/ce_image18.png" alt="witches" class="witches item">
+        <img src="media/ce_image19.png" alt="blackmask" class="blackmask item">
+        <img src="media/ce_image20.png" alt="daymask" class="daymask item">
+        <img src="media/ce_logo.png" alt="logo" class="logo item">
         <p>Costume Expressions
             <br>
             3411 Torrence Dr.
@@ -48,5 +48,8 @@
             Rockville, MD 20650
         </p>
     </main>
+    <footer>   
+    Costume Expressions 3411 Torrence Dr. Rockville, MD 20650
+    </footer>
 </body>
 </html>
