--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <title>Picutre Grid Project</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="KevinLogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="media/KevinLogo.png" type="image/x-icon">
 </head>
 
 <body>
