--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!---^^^^^THIS IS REQUIRED FOR OUR GRADES IN THE FUTURE-->
     <meta name="description" content="This is a website that is a project to practice our grid skills and more things like css.">
 
-    <meta property="og:image" content="KevinLogo.png">
+    <meta property="og:image" content="media/KevinLogo.png">
     <meta property="og:title" content="Picture Grid Project">
     <meta property="og:description" content="This is a website that is a project to practice our grid skills and more things like css.">
 
